<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_point">,</string>
    <string name="_eq">=</string>
    <string name="_plus">+</string>
    <string name="_subtraction">-</string>
    <string name="_multiplication">x</string>
    <string name="_division">÷</string>
    <string name="_delete">AC</string>
    <string name="_backspace">⌫</string>
    <string name="_settings">⚙</string>
    <string name="name_light_theme">Светлая тема</string>
    <string name="name_dark_theme">Темная тема</string>
</resources>